--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>Basic Level C# Programming</li>
         <li>HTML</li>
     </ul>
-    <p><a href="./public/contact.html">İletişim</a></p>
+    <p><a href="./public/contact.html">Contact</a></p>
     <hr />
     <footer>© Erdem ŞAHİN. All rights reserved.</footer>
 
